--- a/backend/src/adminpanel/design.html
+++ b/backend/src/adminpanel/design.html
@@ -1881,6 +1881,7 @@
                         required
                       />
                     </label>
+
                     <label for="description">
                       <i class="fa-solid fa-note-sticky"></i>
                       <input
@@ -1901,7 +1902,16 @@
                       />
                     </label>
                     <div class="colorInput" style="display: none"></div>
-
+                    <label for="sizes">
+                      <i class="fa-solid fa-palette"></i>
+                      <input
+                        type="number"
+                        name="sizes"
+                        id="sizes"
+                        placeholder="Enter different sizes"
+                      />
+                      <div class="sizesInput" style="display: none"></div>
+                    </label>
                     <label for="cattDown" class="select-label">
                       <i class="fa-solid fa-grip-vertical"></i>
                       <select
@@ -3288,7 +3298,7 @@
                             <th>Selling Price</th>
                             <th>Parent Category</th>
                             <th>Parent Subcategory</th>
-                            <th>Colors</th>
+                            <th>Sizes</th>
                             <th>Quantity</th>
                             <th>Action Button</th>
                           </tr>
