--- a/backend/src/adminpanel/editproduct.html
+++ b/backend/src/adminpanel/editproduct.html
@@ -106,7 +106,15 @@
             </div>
 
             <div class="colorInput" style="display: none"></div>
-
+            <label for="sizes">
+               <i class="fa-solid fa-palette"></i>
+                <input
+                      type="number"
+                      name="sizes"
+                      id="sizes"
+                       placeholder="Enter different sizes"
+                    />
+                      <div class="sizesInput" style="display: none"></div>
             <div class="input-group input-group-subcategory">
               <i class="fa-solid fa-grip-vertical"></i>
               <select
