--- a/backend/src/adminpanel/editsubcategory.html
+++ b/backend/src/adminpanel/editsubcategory.html
@@ -59,7 +59,7 @@
           <div class="logo-container">
             <img src="logo.png" alt="logo" width="100%" height="100%" />
           </div>
-          <h1>YUGTech's Admin Panel</h1>
+          <h1>Online Shopping Store's Admin Panel</h1>
         </nav>
         <section class="form">
           <h2 class="form-title">Edit Sub-Category</h2>
