--- a/backend/src/adminpanel/index.html
+++ b/backend/src/adminpanel/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="logo1.png" />
-    <title>YugTech's Admin Panel</title>
+    <title>Online Shopping Store's Admin Panel</title>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -45,7 +45,7 @@
               style="filter: brightness(0%)"
             />
           </div>
-          <h1>YUGTech's Admin Panel</h1>
+          <h1>Online Shopping Store's Admin Panel</h1>
           <button onclick="showMenu()" class="menu">Menu</button>
 
           <div class="dark-mode">
