--- a/backend/src/mail.html
+++ b/backend/src/mail.html
@@ -717,7 +717,7 @@
                                   <![endif]-->
                                   <!--[if !mso]><!-- -->
                                   <a
-                                    href="https://www.yugindustries.com.np/profile"
+                                    href="http://localhost:5173/profile"
                                     target="_blank"
                                     style="
                                       display: inline-block;
