--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,42 +4,43 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="src/public/logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://www.yugtech.onrender.com" />
     <link rel="manifest" href="manifest.json" />
     <link rel="apple-touch-icon" href="src/public/icons/logo3.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="YugTech" />
+    <meta name="apple-mobile-web-app-title" content="Online Shopping Store" />
 
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
     <meta name="theme-color" content="#ffffff" />
-    <title>YugTech - Fast & Reliable Tech Delivery in Nepal</title>
+    <title>
+      Online Shopping Store - Fast & Reliable Tech Delivery in Australia
+    </title>
 
     <!-- Description shown under title i need to push-->
     <meta
       name="description"
-      content="YugTech delivers the latest gadgets and tech products across Nepal with speed and reliability. Shop now for fast delivery and top brands!"
+      content="Online Shopping Store delivers the latest gadgets and tech products across Australia with speed and reliability. Shop now for fast delivery and top brands!"
     />
 
     <!-- Optional: Keywords for SEO (not heavily used by Google now) -->
     <meta
       name="keywords"
-      content="YugTech, tech delivery Nepal, gadgets Nepal, buy tech online, fast tech shipping"
+      content="Online Shopping Store, shoe delivery Australia, clohting Australia, buy tech online, fast tech shipping"
     />
 
     <!-- Open Graph for link previews (Facebook, LinkedIn, etc.) -->
     <meta
       property="og:title"
-      content="YugTech - Nepal's Fastest Tech Delivery Service"
+      content="Online Shopping Store - Australia's Fastest Tech Delivery Service"
     />
     <meta
       property="og:description"
-      content="Shop top tech brands and get same-day delivery in Nepal with Yug Tech. Reliable, fast, and trusted by thousands."
+      content="Shop top tech brands and get same-day delivery in Australia with Online Shopping Store. Reliable, fast, and trusted by thousands."
     />
-    <meta property="og:url" content="https://yugindustries.com.np" />
+    <meta property="og:url" content="https://try.com" />
     <meta
       property="og:image"
       content="https://res.cloudinary.com/dzgwsrqnf/image/upload/v1753881431/INNOVATING_YOUR_TECH_NEEDS_bpe0vd.png"
@@ -50,11 +51,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="YugTech - Fast Tech Delivery in Nepal"
+      content="Online Shopping Store - Fast Tech Delivery in Australia"
     />
     <meta
       name="twitter:description"
-      content="Get your favorite gadgets delivered fast across Nepal. Browse our top tech collections today!"
+      content="Get your favorite gadgets delivered fast across Australia. Browse our top tech collections today!"
     />
     <meta
       name="twitter:image"
@@ -67,24 +68,24 @@
       {
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "YugTech",
-        "image": "https://www.yugindustries.com.np/logo1.png",
-        "@id": "https://www.yugindustries.com.np/",
-        "url": "https://www.yugindustries.com.np/",
+        "name": "Online Shopping Store",
+        "image": "https://www.try.com/logo1.png",
+        "@id": "https://www.try.com/",
+        "url": "https://www.try.com/",
         "telephone": "+977-9800000000",
         "email": "testproject7828@gmail.com",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "New Road Gate",
-          "addressLocality": "Kathmandu",
-          "addressRegion": "Bagmati",
-          "postalCode": "44600",
-          "addressCountry": "NP"
+          "streetAddress": "New Street",
+          "addressLocality": "Sydney",
+          "addressRegion": "New South Wales (NSW)",
+          "postalCode": "2000",
+          "addressCountry": "AU"
         },
         "geo": {
           "@type": "GeoCoordinates",
-          "latitude": 27.703198,
-          "longitude": 85.312607
+          "latitude": -33.903708,
+          "longitude": 151.237427
         },
         "openingHoursSpecification": [
           {
@@ -108,7 +109,7 @@
         ],
         "sameAs": [
           "https://www.facebook.com/profile.php?id=61576948387191",
-          "https://www.instagram.com/yugtech.np/"
+          "https://www.instagram.com/Online Shopping Store.np/"
         ],
         "priceRange": "$100 - $150,000",
         "department": {
