--- a/backend/src/adminpanel/chatbot.html
+++ b/backend/src/adminpanel/chatbot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="logo1.png" />
-    <title>YugTech - Customer Chat App</title>
+    <title>Online Shopping Store - Customer Chat App</title>
     <link rel="stylesheet" href="design.css" />
     <link
       rel="stylesheet"
