--- a/backend/src/adminpanel/newdesign.html
+++ b/backend/src/adminpanel/newdesign.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="logo1.png" />
-    <title>YugTech's Admin Panel</title>
+    <title>Online Shopping Store's Admin Panel</title>
     <link rel="stylesheet" href="newdesign.css" />
     <link
       rel="stylesheet"
@@ -18,9 +18,9 @@
       <aside class="sidebar">
         <div class="sidebar-header">
           <div class="logo">
-            <img src="logo.png" alt="YugTech Logo" />
+            <img src="logo.png" alt="Online Shopping Store Logo" />
           </div>
-          <h1 class="company-name">YugTech</h1>
+          <h1 class="company-name">Online Shopping Store</h1>
         </div>
 
         <div class="user-profile">
@@ -417,7 +417,7 @@
                       </div>
                       <div class="info-item">
                         <span class="info-label">Address:</span>
-                        <span class="info-value">Kathmandu, Nepal</span>
+                        <span class="info-value">Syndney, Australia</span>
                       </div>
                     </div>
                   </div>
@@ -509,7 +509,7 @@
                       </div>
                       <div class="info-item">
                         <span class="info-label">Address:</span>
-                        <span class="info-value">Kathmandu, Nepal</span>
+                        <span class="info-value">Sydney, Australia</span>
                       </div>
                       <div class="info-item">
                         <span class="info-label">Joined Date:</span>
